--- a/mines.html
+++ b/mines.html
@@ -551,17 +551,17 @@
     <!-- Нижнее меню -->
     <nav class="bottom-nav">
         <div class="nav-container">
-            <a href="profile.html" class="nav-item">
-                <div class="nav-icon">👤</div>
-                <div class="nav-text">Профиль</div>
+            <a href="inv.html" class="nav-item">
+                <div class="nav-icon">🎒</div>
+                <div class="nav-text">Инвентарь</div>
             </a>
             <a href="index.html" class="nav-item">
                 <div class="nav-icon">🏠</div>
                 <div class="nav-text">Главная</div>
             </a>
-            <a href="withdraw.html" class="nav-item">
-                <div class="nav-icon">💎</div>
-                <div class="nav-text">Вывод</div>
+            <a href="shop.html" class="nav-item">
+                <div class="nav-icon">🛒</div>
+                <div class="nav-text">Магазин</div>
             </a>
         </div>
     </nav>
