--- a/upgrade.html
+++ b/upgrade.html
@@ -201,7 +201,7 @@
             background: linear-gradient(45deg, #1a1a4a, #2d2d6e);
         }
 
-        /* Трасса по краю круга */
+        /* Трасса по краю круга - слева зеленая, справа красная */
         .circular-track {
             position: absolute;
             top: 20px;
@@ -211,26 +211,58 @@
             border-radius: 50%;
             background: conic-gradient(
                 from 0deg,
-                #00ff00 0deg 180deg,
-                #ff0000 180deg 360deg
+                #4CAF50 0deg 180deg,    /* Левая половина - зеленая */
+                #ff4444 180deg 360deg   /* Правая половина - красная */
             );
             box-shadow:
-                0 0 30px rgba(0, 255, 0, 0.4),
-                0 0 30px rgba(255, 0, 0, 0.4);
-            animation: trackGlow 2s ease-in-out infinite alternate;
+                0 0 40px rgba(76, 175, 80, 0.5),
+                0 0 40px rgba(255, 68, 68, 0.5);
+            animation: trackGlow 3s ease-in-out infinite alternate;
         }
 
         @keyframes trackGlow {
             0% {
                 box-shadow:
-                    0 0 20px rgba(0, 255, 0, 0.3),
-                    0 0 20px rgba(255, 0, 0, 0.3);
+                    0 0 30px rgba(76, 175, 80, 0.4),
+                    0 0 30px rgba(255, 68, 68, 0.4);
             }
             100% {
                 box-shadow:
-                    0 0 40px rgba(0, 255, 0, 0.6),
-                    0 0 40px rgba(255, 0, 0, 0.6);
+                    0 0 60px rgba(76, 175, 80, 0.7),
+                    0 0 60px rgba(255, 68, 68, 0.7);
             }
+        }
+
+        /* Метки на трассе */
+        .track-labels {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            border-radius: 50%;
+        }
+
+        .win-label {
+            position: absolute;
+            left: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #4CAF50;
+            font-weight: bold;
+            font-size: 1.1rem;
+            text-shadow: 0 0 15px rgba(76, 175, 80, 0.8);
+        }
+
+        .lose-label {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #ff4444;
+            font-weight: bold;
+            font-size: 1.1rem;
+            text-shadow: 0 0 15px rgba(255, 68, 68, 0.8);
         }
 
         .wheel-container {
@@ -247,17 +279,17 @@
             border-radius: 50%;
             background: conic-gradient(
                 from 0deg,
-                #4A00FF 0deg 180deg,
-                #8A2BE2 180deg 360deg
+                #2d2b55 0deg 180deg,    /* Левая половина */
+                #4a3f7a 180deg 360deg   /* Правая половина */
             );
             position: relative;
             transition: transform 7s cubic-bezier(0.1, 0.8, 0.2, 1);
             box-shadow:
-                0 0 80px rgba(74, 0, 255, 0.6),
-                0 0 150px rgba(138, 43, 226, 0.4),
-                inset 0 0 100px rgba(0, 0, 0, 0.7);
-            border: 8px solid rgba(255, 255, 255, 0.1);
-            filter: brightness(1.3) contrast(1.2);
+                0 0 80px rgba(45, 43, 85, 0.8),
+                0 0 150px rgba(74, 63, 122, 0.6),
+                inset 0 0 100px rgba(0, 0, 0, 0.8);
+            border: 4px solid rgba(255, 255, 255, 0.15);
+            filter: brightness(1.2) contrast(1.3);
             transform-origin: center;
         }
 
@@ -265,25 +297,25 @@
         .wheel::before {
             content: '';
             position: absolute;
-            top: -15px;
-            left: -15px;
-            right: -15px;
-            bottom: -15px;
+            top: -20px;
+            left: -20px;
+            right: -20px;
+            bottom: -20px;
             border-radius: 50%;
             background: conic-gradient(
                 from 0deg,
-                rgba(74, 0, 255, 0.4) 0deg 180deg,
-                rgba(138, 43, 226, 0.4) 180deg 360deg
+                rgba(76, 175, 80, 0.3) 0deg 180deg,    /* Слева зеленое свечение */
+                rgba(255, 68, 68, 0.3) 180deg 360deg   /* Справа красное свечение */
             );
             z-index: -1;
-            filter: blur(25px);
-            animation: wheelGlow 3s ease-in-out infinite alternate;
+            filter: blur(30px);
+            animation: wheelGlow 4s ease-in-out infinite alternate;
         }
 
         @keyframes wheelGlow {
             0% {
-                opacity: 0.6;
-                transform: scale(1);
+                opacity: 0.5;
+                transform: scale(0.98);
             }
             100% {
                 opacity: 1;
@@ -295,47 +327,74 @@
         .wheel::after {
             content: '';
             position: absolute;
-            top: 20px;
-            left: 20px;
-            right: 20px;
-            bottom: 20px;
+            top: 15px;
+            left: 15px;
+            right: 15px;
+            bottom: 15px;
             border-radius: 50%;
             background:
-                radial-gradient(circle at 30% 30%, rgba(255,255,255,0.15) 0%, transparent 50%),
-                radial-gradient(circle at 70% 70%, rgba(255,255,255,0.15) 0%, transparent 50%);
-            border: 3px solid rgba(255, 255, 255, 0.1);
+                radial-gradient(circle at 30% 30%, rgba(255,255,255,0.1) 0%, transparent 50%),
+                radial-gradient(circle at 70% 70%, rgba(255,255,255,0.1) 0%, transparent 50%);
+            border: 2px solid rgba(255, 255, 255, 0.08);
+            box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
         }
 
-        /* Шар на трассе - теперь внутри круга */
+        /* Центральный элемент */
+        .wheel-center {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 80px;
+            height: 80px;
+            background: radial-gradient(circle, #ffa36c, #ff6b6b);
+            border-radius: 50%;
+            box-shadow:
+                0 0 30px rgba(255, 163, 108, 0.6),
+                inset 0 0 20px rgba(255, 255, 255, 0.2);
+            z-index: 10;
+            animation: centerPulse 2s ease-in-out infinite;
+        }
+
+        @keyframes centerPulse {
+            0%, 100% { transform: translate(-50%, -50%) scale(1); }
+            50% { transform: translate(-50%, -50%) scale(1.05); }
+        }
+
+        /* Шар на трассе */
         .track-ball {
             position: absolute;
-            width: 35px;
-            height: 35px;
-            background: radial-gradient(circle at 30% 30%, #ff6b6b, #ff4444);
+            width: 25px;
+            height: 25px;
+            background: radial-gradient(circle at 30% 30%, #ffffff, #ffa36c);
             border-radius: 50%;
-            top: -17px;
+            top: -12px;
             left: 50%;
             transform: translateX(-50%);
             box-shadow:
-                0 0 20px rgba(255, 107, 107, 0.8),
-                0 0 40px rgba(255, 107, 107, 0.6);
+                0 0 20px rgba(255, 255, 255, 0.8),
+                0 0 40px rgba(255, 163, 108, 0.6);
             z-index: 25;
+            filter: drop-shadow(0 0 10px rgba(255, 163, 108, 0.8));
         }
 
         /* Кнопка запуска */
         .start-upgrade-btn {
-            background: linear-gradient(90deg, #ff6b6b, #ffa36c);
+            background: linear-gradient(135deg, #ff6b6b, #ffa36c);
             border: none;
             color: white;
-            padding: 15px 40px;
-            border-radius: 25px;
+            padding: 16px 45px;
+            border-radius: 12px;
             font-weight: bold;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             cursor: pointer;
             transition: all 0.3s ease;
-            box-shadow: 0 5px 25px rgba(255, 107, 107, 0.4);
+            box-shadow:
+                0 8px 30px rgba(255, 107, 107, 0.4),
+                0 4px 15px rgba(0, 0, 0, 0.3);
             position: relative;
             overflow: hidden;
+            letter-spacing: 0.5px;
         }
 
         .start-upgrade-btn::before {
@@ -346,7 +405,7 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
-            transition: left 0.5s;
+            transition: left 0.6s;
         }
 
         .start-upgrade-btn:hover::before {
@@ -354,14 +413,38 @@
         }
 
         .start-upgrade-btn:hover:not(:disabled) {
-            transform: scale(1.05);
-            box-shadow: 0 8px 35px rgba(255, 107, 107, 0.6);
+            transform: translateY(-2px);
+            box-shadow:
+                0 12px 40px rgba(255, 107, 107, 0.6),
+                0 6px 20px rgba(0, 0, 0, 0.4);
         }
 
         .start-upgrade-btn:disabled {
             opacity: 0.5;
             cursor: not-allowed;
             transform: none;
+        }
+
+        /* Кнопка в магазин */
+        .go-to-shop-btn {
+            background: linear-gradient(135deg, #2196F3, #1976D2);
+            border: none;
+            color: white;
+            padding: 12px 25px;
+            border-radius: 10px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            text-decoration: none;
+            display: inline-block;
+            text-align: center;
+            margin-top: 10px;
+            box-shadow: 0 4px 15px rgba(33, 150, 243, 0.4);
+        }
+
+        .go-to-shop-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(33, 150, 243, 0.6);
         }
 
         /* Правая часть - выбор карты */
@@ -375,20 +458,19 @@
             overflow-y: auto;
         }
 
-        /* Кастомный скроллбар красный */
+        /* Кастомный скроллбар */
         .card-selection::-webkit-scrollbar {
-            width: 8px;
+            width: 6px;
         }
 
         .card-selection::-webkit-scrollbar-track {
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 4px;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 3px;
         }
 
         .card-selection::-webkit-scrollbar-thumb {
             background: linear-gradient(to bottom, #ff6b6b, #ff4444);
-            border-radius: 4px;
-            box-shadow: 0 0 10px rgba(255, 107, 107, 0.5);
+            border-radius: 3px;
         }
 
         .card-selection::-webkit-scrollbar-thumb:hover {
@@ -557,9 +639,11 @@
             <div class="upgrade-wheel">
                 <div class="wheel-track">
                     <div class="circular-track"></div>
+                    <div class="track-labels">
+                    </div>
                     <div class="wheel-container">
                         <div class="wheel" id="upgradeWheel">
-                            <!-- Шар теперь внутри круга и вращается вместе с ним -->
+                            <div class="wheel-center"></div>
                             <div class="track-ball"></div>
                         </div>
                     </div>
@@ -716,7 +800,13 @@
             const inventoryGrid = document.getElementById('upgradeInventory');
 
             if (inventory.length === 0) {
-                inventoryGrid.innerHTML = '<div style="text-align: center; opacity: 0.7; padding: 20px;">Инвентарь пуст</div>';
+                inventoryGrid.innerHTML = `
+                    <div style="text-align: center; padding: 30px; opacity: 0.7;">
+                        <div style="font-size: 3rem; margin-bottom: 15px;">🎒</div>
+                        <div style="margin-bottom: 15px; font-size: 1.1rem;">Инвентарь пуст</div>
+                        <a href="shop.html" class="go-to-shop-btn">Перейти в магазин</a>
+                    </div>
+                `;
                 return;
             }
 
@@ -800,12 +890,11 @@
             // Вычисляем финальный угол
             let finalRotation;
             if (isSuccess) {
-                // Успех - зеленая зона (0°-180°)
-                finalRotation = 180 + (Math.random() - 0.5) * 160; // 100°-260° (зеленая зона)
+                // Успех - зеленая зона слева (0°-180°)
+                finalRotation = 90 + (Math.random() - 0.5) * 160; // 10°-170° (левая половина)
             } else {
-                // Провал - красная зона (180°-360°)
-                finalRotation = 0 + (Math.random() - 0.5) * 160; // -80°-80° и 280°-360° (красная зона)
-                if (finalRotation < 0) finalRotation += 360;
+                // Провал - красная зона справа (180°-360°)
+                finalRotation = 270 + (Math.random() - 0.5) * 160; // 190°-350° (правая половина)
             }
 
             // 4 полных оборота + финальный угол
